--- a/源码/vue-wymusic/index.html
+++ b/源码/vue-wymusic/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>网易云音乐</title>
+    <title>NeteaseCloudMusic</title>
 </head>
 
 <body>
